src/parser/grammar.rs
//! Parser implementation using chumsky

use chumsky::input::{Stream, ValueInput};
use chumsky::prelude::*;

use crate::parser::ast::*;
use crate::parser::lexer::Token;

// Path parsing helper types imported from AST (Feature 007):
// - PathDecl, PathBody, PathCommand
// - VertexDecl, VertexPosition
// - LineToDecl, ArcToDecl
// - ArcParams, SweepDirection
// All are available via the ast::* glob import above

/// Helper enum for parsing constraint equality expressions
#[derive(Debug, Clone)]
enum ConstraintExprKind {
    Property(PropertyRef),
    PropertyWithOffset(PropertyRef, f64),
    Constant(f64),
}

/// Check if an identifier is a symbolic color category
fn is_color_category(ident: &str) -> Option<ColorCategory> {
    match ident {
        "foreground" => Some(ColorCategory::Foreground),
        "background" => Some(ColorCategory::Background),
        "text" => Some(ColorCategory::Text),
        "accent" => Some(ColorCategory::Accent),
        "secondary" => Some(ColorCategory::Secondary),
        _ => None,
    }
}

/// Check if an identifier is a lightness modifier
fn is_lightness_modifier(ident: &str) -> Option<Lightness> {
    match ident {
        "light" => Some(Lightness::Light),
        "dark" => Some(Lightness::Dark),
        _ => None,
    }
}

/// Parse DSL source code into an AST
/// `rect line` / `path row [...]`: a reserved word where a name goes. The
/// grammar reads it as a second, unnamed declaration, so the name silently
/// vanishes and every later `line` is a parse error far away from the cause.
fn reserved_word_as_name(input: &str) -> Option<crate::ParseError> {
    use crate::parser::lexer::Token;
    let toks: Vec<(Token, std::ops::Range<usize>)> = crate::parser::lexer::lex(input).collect();
    let declares = |t: &Token| {
        matches!(
            t,
            Token::Rect | Token::Circle | Token::Ellipse | Token::Polygon | Token::Line | Token::Path
                | Token::Callout | Token::Group | Token::Row | Token::Col | Token::Grid | Token::Stack
        )
    };
    for w in toks.windows(2) {
        let ((a, sa), (b, sb)) = (&w[0], &w[1]);
        if !declares(a) || input[sa.end..sb.start].contains('\n') {
            continue;
        }
        if let Some(word) = crate::error::keyword_spelling(b) {
            return Some(crate::ParseError::Syntax {
                span: sb.clone(),
                message: format!(
                    "`{}` is a reserved word and cannot name an element; call it something else \
                     (e.g. `{}_1`, `track`)",
                    word, word
                ),
                expected: vec![],
            });
        }
    }
    None
}

/// `x.line[4]`, `t.row[3]`, `t.cell[3][2]` name one part wherever a name
/// goes (constraints, selectors, references): they become `x.line4`,
/// `t.row3` and `t.r3c1` (rows and columns count from 1; a table's cell
/// parts number columns from 0). Ranges (`x.lines[4..6]`) are left to the
/// selector grammar.
fn indexed_parts(toks: Vec<(Token, std::ops::Range<usize>)>) -> Vec<(Token, std::ops::Range<usize>)> {
    let int = |t: Option<&(Token, std::ops::Range<usize>)>| match t {
        Some((Token::Number(n), _)) if n.fract() == 0.0 && *n >= 0.0 => Some(*n as usize),
        _ => None,
    };
    let is = |t: Option<&(Token, std::ops::Range<usize>)>, want: &Token| t.is_some_and(|(x, _)| x == want);
    let mut out = Vec::with_capacity(toks.len());
    let mut i = 0;
    while i < toks.len() {
        let after_dot = i > 0 && toks[i - 1].0 == Token::Dot;
        let word = match &toks[i].0 {
            Token::Line => Some("line"),
            Token::Row => Some("row"),
            Token::Ident(w) if w == "line" || w == "lines" => Some("line"),
            Token::Ident(w) if w == "row" || w == "rows" => Some("row"),
            Token::Ident(w) if w == "cell" => Some("cell"),
            _ => None,
        };
        if let (true, Some(word)) = (after_dot, word) {
            let one = |at: usize| -> Option<usize> {
                (is(toks.get(at), &Token::BracketOpen) && is(toks.get(at + 2), &Token::BracketClose))
                    .then(|| int(toks.get(at + 1)))
                    .flatten()
            };
            if let Some(a) = one(i + 1) {
                let (name, used) = if word == "cell" {
                    match one(i + 4) {
                        Some(c) if c >= 1 => (format!("r{}c{}", a, c - 1), 7),
                        _ => (String::new(), 0),
                    }
                } else {
                    (format!("{}{}", word, a), 4)
                };
                if used > 0 {
                    let span = toks[i].1.start..toks[i + used - 1].1.end;
                    out.push((Token::Ident(name), span));
                    i += used;
                    continue;
                }
            }
        }
        out.push(toks[i].clone());
        i += 1;
    }
    out
}

pub fn parse(input: &str) -> Result<Document, Vec<crate::ParseError>> {
    let len = input.len();
    if let Some(e) = reserved_word_as_name(input) {
        return Err(vec![e.locate(input)]);
    }

    // Create a logos lexer and convert to token stream
    let tokens = indexed_parts(crate::parser::lexer::lex(input).collect());
    let token_iter = tokens.into_iter().map(|(tok, span)| (tok, span.into()));

    // Turn the token iterator into a stream that chumsky can use
    let token_stream = Stream::from_iter(token_iter)
        // Split (Token, SimpleSpan) into token and span parts
        .map((len..len).into(), |(t, s): (_, _)| (t, s));

    document_parser()
        .parse(token_stream)
        .into_result()
        .map_err(|errs| {
            errs.into_iter()
                .map(|e| crate::ParseError::from(e).locate(input))
                .collect::<Vec<_>>()
        })
        .and_then(|doc| {
            expand_starred(doc).map_err(|(span, message)| {
                vec![crate::ParseError::Syntax { span, message, expected: vec![] }.locate(input)]
            })
        })
}

/// `doc d* [fname: ["a", "b", "c"]]` -> d0, d1, d2, each taking the i-th item
/// of every list-valued argument (lists zip by index; other arguments are
/// shared). Works for shapes too: `rect bar* [width: [88, 70, 55]]`.
/// The style key a modifier name means (`font_size` -> FontSize), else a
/// custom key.
pub fn style_key_named(name: &str) -> StyleKey {
    match name {
                "label" => StyleKey::Label,
                "role" => StyleKey::Role,
                "fill" => StyleKey::Fill,
                "stroke" => StyleKey::Stroke,
                "stroke_width" => StyleKey::StrokeWidth,
                "opacity" => StyleKey::Opacity,
                "fill_opacity" => StyleKey::FillOpacity,
                "stroke_opacity" => StyleKey::StrokeOpacity,
                "font_size" => StyleKey::FontSize,
                "class" => StyleKey::Class,
                "gap" => StyleKey::Gap,
                "size" => StyleKey::Size,
                "width" => StyleKey::Width,
                "height" => StyleKey::Height,
                "routing" => StyleKey::Routing,
                "label_position" => StyleKey::LabelPosition,
                "caption_of" => StyleKey::CaptionOf,
                "x" => StyleKey::X,
                "y" => StyleKey::Y,
                "stroke_dasharray" => StyleKey::StrokeDasharray,
                "rotation" => StyleKey::Rotation,
                "label_at" => StyleKey::LabelAt,
                "label_offset" => StyleKey::LabelOffset,
                "z_order" => StyleKey::ZOrder,
                "pointer" => StyleKey::Pointer,
                "dx" => StyleKey::Dx,
                "dy" => StyleKey::Dy,
                "scale" => StyleKey::Scale,
                "align" => StyleKey::Align,
                "label_fill" => StyleKey::LabelFill,
                other => StyleKey::Custom(other.to_string()),
            }
}

fn expand_starred(mut doc: Document) -> Result<Document, (Span, String)> {
    fn per_item(
        mods: &[Spanned<StyleValue>],
        name: &str,
        span: &Span,
    ) -> Result<usize, (Span, String)> {
        let mut n: Option<usize> = None;
        for v in mods {
            if let StyleValue::List(items) = &v.node {
                match n {
                    None => n = Some(items.len()),
                    Some(k) if k != items.len() => {
                        return Err((
                            v.span.clone(),
                            format!(
                                "'{}*': its lists have different lengths ({} and {}); every list makes one element per item, so they must match",
                                name, k, items.len()
                            ),
                        ))
                    }
                    _ => {}
                }
            }
        }
        n.ok_or_else(|| {
            (
                span.clone(),
                format!("'{}*' makes one element per item of a list argument, but it has no list (e.g. [label: [\"a\", \"b\"]])", name),
            )
        })
    }
    /// How many elements `name*` makes: `count: N`, or one per item of its
    /// lists. With a count, `items:` may be shorter (it sets the first ones);
    /// other lists must have one value each.
    fn how_many(named: &[(String, Spanned<StyleValue>)], name: &str, span: &Span) -> Result<usize, (Span, String)> {
        let count = named.iter().find(|(k, _)| k == "count");
        let Some((_, c)) = count else {
            let values: Vec<Spanned<StyleValue>> = named.iter().map(|(_, v)| v.clone()).collect();
            return per_item(&values, name, span);
        };
        let n = match &c.node {
            StyleValue::Number { value, .. } if *value >= 1.0 && value.fract() == 0.0 => *value as usize,
            _ => return Err((c.span.clone(), format!("'{}*': count: a whole number, at least 1", name))),
        };
        for (k, v) in named {
            if let StyleValue::List(items) = &v.node {
                if k == "items" && items.len() > n {
                    return Err((v.span.clone(), format!("'{}*': {} items for count: {}", name, items.len(), n)));
                }
                if k != "items" && items.len() != n {
                    return Err((
                        v.span.clone(),
                        format!("'{}*': {} has {} values for count: {}; give one each, or one for all", name, k, items.len(), n),
                    ));
                }
            }
        }
        Ok(n)
    }
    /// `items: [{a: 1, b: 2}, ...]`: item i's fields, as extra arguments.
    fn record_fields(values: &[(String, Spanned<StyleValue>)], i: usize) -> Vec<(Spanned<Identifier>, Spanned<StyleValue>)> {
        values
            .iter()
            .filter(|(k, _)| k == "items")
            .filter_map(|(_, v)| match &v.node {
                StyleValue::List(items) => items.get(i).map(|x| x.node.clone()),
                _ => None,
            })
            .flat_map(|r| match r {
                StyleValue::Record(fields) => fields,
                _ => Vec::new(),
            })
            .collect()
    }
    fn pick(v: &Spanned<StyleValue>, i: usize) -> Spanned<StyleValue> {
        match &v.node {
            StyleValue::List(items) => items[i].clone(),
            _ => v.clone(),
        }
    }
    fn walk(stmts: Vec<Spanned<Statement>>, counts: &mut std::collections::HashMap<String, usize>) -> Result<Vec<Spanned<Statement>>, (Span, String)> {
        let mut out = Vec::with_capacity(stmts.len());
        for st in stmts {
            let span = st.span.clone();
            match st.node {
                Statement::Shape(shape) if shape.name.as_ref().is_some_and(|n| n.node.0.ends_with('*')) => {
                    let name = shape.name.clone().unwrap();
                    let base = name.node.0.trim_end_matches('*').to_string();
                    let named_vals: Vec<(String, Spanned<StyleValue>)> = shape
                        .modifiers
                        .iter()
                        .map(|m| (m.node.key.node.source_name(), m.node.value.clone()))
                        .collect();
                    let n = how_many(&named_vals, &base, &name.span)?;
                    let mut shape = shape;
                    shape.modifiers.retain(|m| m.node.key.node.source_name() != "count");
                    counts.insert(base.clone(), n);
                    let named: Vec<(String, Spanned<StyleValue>)> = shape
                        .modifiers
                        .iter()
                        .map(|m| (m.node.key.node.source_name(), m.node.value.clone()))
                        .collect();
                    for i in 0..n {
                        let mut s = shape.clone();
                        s.name = Some(Spanned::new(Identifier::new(format!("{}{}", base, i)), name.span.clone()));
                        s.modifiers.retain(|m| m.node.key.node.source_name() != "items");
                        for m in &mut s.modifiers {
                            m.node.value = pick(&m.node.value, i);
                        }
                        for (k, v) in record_fields(&named, i) {
                            let sp = k.span.clone();
                            // An item's own value replaces the shared one.
                            s.modifiers.retain(|m| m.node.key.node.source_name() != k.node.0);
                            s.modifiers.push(Spanned::new(
                                StyleModifier { key: Spanned::new(style_key_named(&k.node.0), sp.clone()), value: v },
                                sp,
                            ));
                        }
                        out.push(Spanned::new(Statement::Shape(s), span.clone()));
                    }
                }
                Statement::TemplateInstance(inst) if inst.instance_name.node.0.ends_with('*') => {
                    let base = inst.instance_name.node.0.trim_end_matches('*').to_string();
                    let named_vals: Vec<(String, Spanned<StyleValue>)> =
                        inst.arguments.iter().map(|(k, v)| (k.node.0.clone(), v.clone())).collect();
                    let n = how_many(&named_vals, &base, &inst.instance_name.span)?;
                    let mut inst = inst;
                    inst.arguments.retain(|(k, _)| k.node.0 != "count");
                    counts.insert(base.clone(), n);
                    let named: Vec<(String, Spanned<StyleValue>)> =
                        inst.arguments.iter().map(|(k, v)| (k.node.0.clone(), v.clone())).collect();
                    for i in 0..n {
                        let mut t = inst.clone();
                        t.instance_name = Spanned::new(Identifier::new(format!("{}{}", base, i)), inst.instance_name.span.clone());
                        t.arguments.retain(|(k, _)| k.node.0 != "items");
                        for (_, v) in &mut t.arguments {
                            *v = pick(v, i);
                        }
                        for (k, v) in record_fields(&named, i) {
                            t.arguments.retain(|(a, _)| a.node.0 != k.node.0);
                            t.arguments.push((k, v));
                        }
                        out.push(Spanned::new(Statement::TemplateInstance(t), span.clone()));
                    }
                }
                Statement::Layout(mut l) => {
                    l.children = walk(l.children, counts)?;
                    out.push(Spanned::new(Statement::Layout(l), span));
                }
                Statement::Group(mut g) => {
                    g.children = walk(g.children, counts)?;
                    out.push(Spanned::new(Statement::Group(g), span));
                }
                Statement::TemplateDecl(mut t) => {
                    if let Some(body) = t.body.take() {
                        t.body = Some(walk(body, counts)?);
                    }
                    out.push(Spanned::new(Statement::TemplateDecl(t), span));
                }
                other => out.push(Spanned::new(other, span)),
            }
        }
        Ok(out)
    }
    let mut counts = std::collections::HashMap::new();
    doc.statements = walk(doc.statements, &mut counts)?;
    doc.statements = zip_constraints(doc.statements, &counts)?;
    Ok(doc)
}

/// `constrain k*.center = d*.center`: one constraint per index (k0 on d0,
/// k1 on d1, ...), for elements declared with `name*`.
fn zip_constraints(stmts: Vec<Spanned<Statement>>, counts: &std::collections::HashMap<String, usize>) -> Result<Vec<Spanned<Statement>>, (Span, String)> {
    fn starred(p: &ElementPath) -> Vec<String> {
        p.segments.iter().filter_map(|s| s.node.0.strip_suffix('*').map(str::to_string)).collect()
    }
    fn paths(e: &ConstraintExpr) -> Vec<&ElementPath> {
        match e {
            ConstraintExpr::Equal { left, right } | ConstraintExpr::EqualWithOffset { left, right, .. } => {
                vec![&left.element.node, &right.element.node]
            }
            ConstraintExpr::Constant { left, .. } | ConstraintExpr::GreaterOrEqual { left, .. } | ConstraintExpr::LessOrEqual { left, .. } => {
                vec![&left.element.node]
            }
            ConstraintExpr::Midpoint { target, .. } => vec![&target.element.node],
            ConstraintExpr::Contains { .. } => vec![],
        }
    }
    fn nth(e: &mut ConstraintExpr, i: usize) {
        let fix = |p: &mut ElementPath| {
            for s in &mut p.segments {
                if let Some(b) = s.node.0.strip_suffix('*') {
                    s.node = Identifier::new(format!("{}{}", b, i));
                }
            }
        };
        match e {
            ConstraintExpr::Equal { left, right } | ConstraintExpr::EqualWithOffset { left, right, .. } => {
                fix(&mut left.element.node);
                fix(&mut right.element.node);
            }
            ConstraintExpr::Constant { left, .. } | ConstraintExpr::GreaterOrEqual { left, .. } | ConstraintExpr::LessOrEqual { left, .. } => {
                fix(&mut left.element.node)
            }
            ConstraintExpr::Midpoint { target, .. } => fix(&mut target.element.node),
            ConstraintExpr::Contains { .. } => {}
        }
    }
    let mut out = Vec::with_capacity(stmts.len());
    for st in stmts {
        let span = st.span.clone();
        match st.node {
            Statement::Constrain(d) => {
                let names: Vec<String> = paths(&d.expr).into_iter().flat_map(starred).collect();
                if names.is_empty() {
                    out.push(Spanned::new(Statement::Constrain(d), span));
                    continue;
                }
                let mut n: Option<(usize, &str)> = None;
                for name in &names {
                    let Some(&k) = counts.get(name) else {
                        return Err((span, format!("'{}*' in a constraint names the elements of a `{}*` declaration, and there is none", name, name)));
                    };
                    match n {
                        Some((m, other)) if m != k => {
                            return Err((
                                span,
                                format!("'{}*' has {} elements and '{}*' has {}: a constraint over both pairs them by index, so they must match", other, m, name, k),
                            ))
                        }
                        _ => n = Some((k, name)),
                    }
                }
                for i in 0..n.unwrap().0 {
                    let mut c = d.clone();
                    nth(&mut c.expr, i);
                    if let Some(nm) = &mut c.name {
                        nm.node = Identifier::new(format!("{}_{}", nm.node.0, i));
                    }
                    out.push(Spanned::new(Statement::Constrain(c), span.clone()));
                }
            }
            Statement::Layout(mut l) => {
                l.children = zip_constraints(l.children, counts)?;
                out.push(Spanned::new(Statement::Layout(l), span));
            }
            Statement::Group(mut g) => {
                g.children = zip_constraints(g.children, counts)?;
                out.push(Spanned::new(Statement::Group(g), span));
            }
            Statement::TemplateDecl(mut t) => {
                if let Some(body) = t.body.take() {
                    t.body = Some(zip_constraints(body, counts)?);
                }
                out.push(Spanned::new(Statement::TemplateDecl(t), span));
            }
            other => out.push(Spanned::new(other, span)),
        }
    }
    Ok(out)
}

/// Helper to extract span range from chumsky's MapExtra
fn span_range(e: &impl chumsky::span::Span<Offset = usize>) -> std::ops::Range<usize> {
    e.start()..e.end()
}

// ==================== Path Shape Parsers (Feature 007) ====================

/// Parsed modifier value - can be a number, sweep direction, or identifier (Feature 008)
#[derive(Debug, Clone)]
enum ParsedModifierValue {
    Number(f64),
    Sweep(SweepDirection),
    Identifier(Spanned<Identifier>), // Feature 008: for via references
}

/// Helper struct for parsing arc modifiers within brackets
#[derive(Debug, Clone, Default)]
struct ParsedArcModifiers {
    x: Option<f64>,
    y: Option<f64>,
    radius: Option<f64>,
    bulge: Option<f64>,
    sweep: Option<SweepDirection>,
    large_arc: Option<bool>,
    via: Option<Spanned<Identifier>>, // Feature 008: steering vertex reference
}

impl ParsedArcModifiers {
    fn into_position_and_params(self) -> (Option<VertexPosition>, ArcParams) {
        let position = if self.x.is_some() || self.y.is_some() {
            Some(VertexPosition {
                x: self.x,
                y: self.y,
            })
        } else {
            None
        };

        let params = if let Some(radius) = self.radius {
            ArcParams::Radius {
                radius,
                sweep: self.sweep.unwrap_or_default(),
                large_arc: self.large_arc.unwrap_or(false),
            }
        } else if let Some(bulge) = self.bulge {
            ArcParams::Bulge(bulge)
        } else {
            ArcParams::default()
        };

        (position, params)
    }
}

fn document_parser<'a, I>() -> impl Parser<'a, I, Document, extra::Err<Rich<'a, Token>>> + Clone
where
    I: ValueInput<'a, Token = Token, Span = SimpleSpan>,
{
    // Basic token parsers
    let identifier = select! {
        Token::Ident(s) => Identifier::new(s),
    }
    .map_with(|id, e| Spanned::new(id, span_range(&e.span())));

    let string_literal = select! {
        Token::String(s) => s,
    }
    .map_with(|s, e| Spanned::new(s, span_range(&e.span())));

    let number = select! {
        Token::Number(n) => n,
    }
    .map_with(|n, e| Spanned::new(n, span_range(&e.span())));

    // Style key/value parsers
    // Note: We need to handle keyword tokens explicitly since they're not identifiers
    let style_key = choice((
        // Handle the "label" keyword token explicitly
        just(Token::Label).map_with(|_, e| Spanned::new(StyleKey::Label, span_range(&e.span()))),
        // Handle the "role" keyword token explicitly
        just(Token::Role).map_with(|_, e| Spanned::new(StyleKey::Role, span_range(&e.span()))),
        // Handle all other style keys as identifiers
        identifier.map(|id| {
            let key = style_key_named(id.node.as_str());
            Spanned::new(key, id.span)
        }),
    ));

    // Parse a color category - identifier or "text" keyword (since text is reserved)
    let color_category = choice((
        // "text" keyword token maps to Text category
        just(Token::Text)
            .map_with(|_, e| Spanned::new(Identifier::new("text"), span_range(&e.span()))),
        // Regular identifier
        identifier,
    ));

    // Parse a symbolic color: category(-variant)?(-lightness)?
    // e.g., foreground, foreground-1, text-dark, accent-2-light
    let symbolic_color = color_category
        .then(just(Token::Minus).ignore_then(number).or_not())
        .then(just(Token::Minus).ignore_then(identifier).or_not())
        .try_map(|((cat_id, variant_num), lightness_id), span| {
            // Check if this is a valid symbolic color category
            if let Some(category) = is_color_category(&cat_id.node.0) {
                let variant = variant_num
                    .map(|n| n.node as u8)
                    .filter(|&v| (1..=3).contains(&v));
                let lightness = lightness_id.and_then(|id| is_lightness_modifier(&id.node.0));

                Ok(StyleValue::Color(ColorValue::Symbolic {
                    category,
                    variant,
                    lightness,
                }))
            } else {
                Err(Rich::custom(span, "not a symbolic color"))
            }
        });
